<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer</string>
    <string name="support_mail_recipent">mrklssh@yandex.ru</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yp_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_fail">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="download_fail">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="looking_for">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="time_of_song">Длительность</string>
    <string name="album">Альбом</string>
    <string name="country">Страна</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="default_song_time">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="your_media_isEmpty">Ваша медиатека пуста</string>
    <string name="you_have_no_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="description">Описание</string>
    <string name="title_for_playlist">Название*</string>
    <string name="to_create">Создать</string>
    <string name="stop_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист «%s» создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист «%s»</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист «%s»</string>
    <string name="track_count">%s</string>
    <string name="choose_app_for_sharing">Выберите приложение для отправки</string>
    <string name="do_you_want_to_delete_track">Выберите приложение для отправки</string>
    <string name="are_you_sure_to_delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="you_do_not_have_any_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="sharing">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="title_delete_playlist_dialog">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="editing">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="empty_playlist">пустой плейлист</string>
    <string name="playlist">Плейлист \"%1$s\"</string>

    <plurals name="plural_tracks">
        <item quantity="zero">0 треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d треков</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="plural_minutes">
        <item quantity="zero">0 минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>
