<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.activity.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
    android:layout_width="match_parent"
    android:layout_height="56dp">

    <TextView
        style="@style/SettingsName"
        android:text="@string/settings"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/settings_height_61dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/icons_and_settings_12dp">

        <TextView
            style="@style/SettingsTextDarkTheme"
            android:text="@string/dark_theme" />
        <Switch
            android:id="@+id/themeSwitcher"
            android:theme="@style/SwitchDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

<RelativeLayout
    android:id="@+id/shareButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/SettingsText"
        android:text="@string/share"
        android:layout_height="@dimen/layout_height_64dp"
        android:padding="@dimen/icons_and_settings_12dp"
        app:drawableRightCompat="@drawable/share"/>

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/supportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsText"
            android:text="@string/support"
            android:layout_height="@dimen/layout_height_64dp"
            android:padding="@dimen/icons_and_settings_12dp"
            app:drawableRightCompat="@drawable/support"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/agreementButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/SettingsText"
            android:text="@string/agreement"
            android:layout_height="@dimen/layout_height_64dp"
            android:padding="@dimen/icons_and_settings_12dp"
            app:drawableRightCompat="@drawable/agreement"/>

    </RelativeLayout>

</LinearLayout>