<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="56dp">
<ImageView
    android:id="@+id/back_from_settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/back_arrow"
    android:backgroundTint="@color/white"
    android:layout_gravity="center_vertical"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/settings"
        android:textAppearance="@font/ys_display_medium"
        android:textColor="@color/black_text"
        android:textSize="@dimen/text_main"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/icons_and_settings"
        >


    </TextView>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/settings_height"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/icons_and_settings">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/dark_theme"
            android:layout_height="wrap_content"

            android:textColor="@color/black_text"
            android:textSize="@dimen/text_settings"
            android:textAppearance="@font/ys_display_medium"
            android:fontFamily="@font/ys_display_medium"
            />
        <Switch
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <TextView
        android:paddingHorizontal="@dimen/icons_and_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textColor="@color/black_text"
        android:textSize="@dimen/text_settings"
        android:textAppearance="@font/ys_display_medium"
        android:fontFamily="@font/ys_display_medium"
        app:drawableEndCompat="@drawable/share" />


    <TextView
        android:paddingHorizontal="@dimen/icons_and_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:gravity="center_vertical"
        android:text="@string/support"
        android:textColor="@color/black_text"
        android:textSize="@dimen/text_settings"
        android:textAppearance="@font/ys_display_medium"
        android:fontFamily="@font/ys_display_medium"
        app:drawableEndCompat="@drawable/support"/>

    <TextView
        android:paddingHorizontal="@dimen/icons_and_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:gravity="center_vertical"
        android:text="@string/agreement"
        android:textColor="@color/black_text"
        android:textSize="@dimen/text_settings"
        android:textAppearance="@font/ys_display_medium"
        android:fontFamily="@font/ys_display_medium"
        app:drawableEndCompat="@drawable/agreement"/>

</LinearLayout>