<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/otstup_knopok">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_main"
                android:textAppearance="@font/ys_display_medium"
                android:fontFamily="@font/ys_display_medium"
               />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="28dp"
            android:orientation="vertical"

            >
            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:backgroundTint="@color/white"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_main"
                android:textAppearance="@font/ys_display_medium"
                android:fontFamily="@font/ys_display_medium"

                app:icon="@drawable/search"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icons_and_settings"
                app:iconTint="@color/black"
                app:cornerRadius="@dimen/otstup_knopok"

                />
            <Button
                android:id="@+id/mediateka_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"

                android:text="@string/mediateka"
                android:textColor="@color/black"
                android:textSize="@dimen/text_main"
                android:textAppearance="@font/ys_display_medium"
                android:fontFamily="@font/ys_display_medium"

                app:icon="@drawable/mediateka"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icons_and_settings"
                app:iconTint="@color/black"
                app:cornerRadius="@dimen/otstup_knopok"/>

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"

                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="@dimen/text_main"
                android:textAppearance="@font/ys_display_medium"
                android:fontFamily="@font/ys_display_medium"

                app:icon="@drawable/settings"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icons_and_settings"
                app:iconTint="@color/black"
                app:cornerRadius="@dimen/otstup_knopok" />
        </LinearLayout>
    </LinearLayout>
