<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SettingsBackground"
    android:orientation="vertical"
    tools:context=".ui.search.activity.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/media_toolbar"
        style="@style/ToolbarColor"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            style="@style/SettingsName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:text="@string/search" />
    </com.google.android.material.appbar.MaterialToolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/search_radius_padding_8dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/SearchEditText"
            android:textCursorDrawable="@drawable/color_cursor"
            android:drawableStart="@drawable/search_mini"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageButton
            android:id="@+id/clearSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ClearSearchButton"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/search_track"
            android:layout_marginBottom="@dimen/button_dimen_24dp"/>

        <ViewStub
            android:id="@+id/nothingFoundViewStub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/nothing_found"/>

        <LinearLayout
            android:id="@+id/noConnectionViewStub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/button_dimen_24dp"
            android:layout_marginTop="@dimen/margin_80dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/layout_marginTop_120dp"
                android:layout_height="@dimen/layout_marginTop_120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/no_connection"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/otstup_knopok_16dp"
                android:text="@string/connection_fail"
                style="@style/TextError"
                android:gravity="center_horizontal">
            </TextView>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/rounded_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_dimen_24dp"
                android:text="@string/update"
                style="@style/UpdateButton">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchHistory_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/historyText"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:paddingHorizontal="@dimen/otstup_knopok_16dp"
                android:text="@string/looking_for"
                style="@style/TextError"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/button_dimen_24dp"
                android:layout_marginBottom="@dimen/search_radius_padding_8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistoryRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/otstup_knopok_16dp"
                android:paddingTop="@dimen/button_dimen_24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                style="@style/UpdateButton"
                android:text="@string/clear_search_history"
                android:paddingHorizontal="@dimen/margin_14dp"
                android:layout_marginTop="@dimen/button_dimen_24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:visibility="gone"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:visibility="gone"
            android:indeterminateTint="@color/blue"/>
    </LinearLayout>
</LinearLayout>