<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenOuterLayoutStyle"
    tools:context=".ui.mediateka.playlist.activity.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/button_dimen_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/button_dimen_24dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/new_playlist_toolbar"
        style="@style/ToolbarColor"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow_24dp">

        <TextView
            android:id="@+id/titleCreatePlaylist"
            style="@style/PlayerSongName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_playlist"
            android:textSize="@dimen/text_main_22sp"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlaceholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        app:cardCornerRadius="@dimen/search_radius_padding_8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist_toolbar">

        <ImageView
            android:id="@+id/pickImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/load_picture_placeholder" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_playlist_title"
        style="@style/PlaylistEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/otstup_knopok_16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/title_for_playlist"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardPlaceholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_playlist_title"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_playlist_description"
        style="@style/PlaylistEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/otstup_knopok_16dp"
        android:layout_marginTop="@dimen/otstup_knopok_16dp"
        android:hint="@string/description"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_playlist_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_playlist_description"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create_playlist"
        style="@style/UpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/grey_icons"
        android:enabled="false"
        android:text="@string/to_create"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_playlist_description"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout_playlist_description" />

</androidx.constraintlayout.widget.ConstraintLayout>